# gen-ai-pipeline-recipe

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
data/recipes/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt
tests/: test_api_recommend_recipe.py  test_rag_pipeline.py
whats_for_dinner/: documents_store.py  ingestion.py  main.py  rag_pipeline.py
